[project]
name = "pokedex"
version = "0.1.0"
description = "This interactive app, built with [Marimo](https://github.com/marimo-team/marimo), allows users to explore Pokémon stats dynamically using dropdown filters and charts. It loads real-time data directly from the [PokémonDB GitHub repository](https://github.com/pokemondb/database) in YAML format and visualizes Pokémon statistics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.13.15",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
